envoy2.json
{
  "listeners": [
    {
      "address": "tcp://127.0.0.1:9002",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "add_user_agent": true,
            "idle_timeout_s": 840,
            "access_log": [
              {
                "path": "/var/log/envoy/egress_http-socketio2.log"
              }
            ],
            "stat_prefix": "egress_http",
            "use_remote_address": true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "socketio2",
                  "domains": [
                    "*"
                  ],
                  "routes": [
                    {
                      "prefix": "/",
                      "cluster": "socketio2",
                      "use_websocket": true,
                      "hash_policy": {
                        "header_name": "referrer"
                      }
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/var/log/envoy/socketio2-admin_access.log",
    "address": "tcp://0.0.0.0:9902"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "socketio2",
        "type": "static",
        "lb_type": "ring_hash",
        "connect_timeout_ms": 250,
        "hosts": [
          {
            "url": "tcp://127.0.0.1:8002"
          },
          {
            "url": "tcp://127.0.0.1:8003"
          },
          {
            "url": "tcp://127.0.0.1:8004"
          }
        ]
      }
    ]
  }
}
